<?xml version="1.0"?>
<package format="2">
  <name>test_cs_sub</name>
  <version>0.0.0</version>
  <description>Contains a test csharp project</description>
  <maintainer email="lennart.nachtigall@student.kit.edu">Lennart Nachtigall</maintainer>
  <license>?</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>
	<build_depend>test_msgs</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>
	<exec_depend>test_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
